16 Aug 2010 Deprecate s37x statement. Use "ldmod s37x" instead - Ivan Warren
11 Aug 2010 Enhance IPL command adding loadparm option. - Paul Gorlinsky
11 Aug 2010 High-Word Facility - Roger Bowler
10 Aug 2010 'qcodepages' added as command to display valid codepages; 'codepage' command 
            enhanced to display the current codepage value, command changed to a PANEL command. 
            Paul Gorlinsky

10 Aug 2010 Population-Count Facility - Roger Bowler
09 Aug 2010 runtime ctl of select S/390 & z insts in S/370 mode - Ivan Warren
09 Aug 2010 Distinct-Operands Facility - Roger Bowler
08 Aug 2010 Allow when building to replace the ESA/390 or z/Architecture
            channel subsystem with S/370 channel I/O.  See README.IOARCH.
            Harold Grovesteen
08 Aug 2010 Load/Store-on-Condition Facility - Roger Bowler
05 Aug 2010 CMDSEP function added. Default is off. The characters 
            '.', '!' and '-' are invalid. Setting the character to a '#'
            could have unexpected results if the command line attempted to
            include a trailing comment.        Paul Gorlinsky
            Type 'help cmdsep' for a description of the command.

04 Aug 2010 Display maxrates when interval expires. Paul Gorlinsky

22 Jul 2010 Add code page mapping 1252/1140 - Kevin Leonard

21 Jul 2010 QUERY and SET have been changed to individual commands:

            These have been replaced with individual commands:

            qstor
            qcpuid
            qproc
            qports
            qlpar
            qpfkeys

            emsg [ on | off | text | time ]

            quitmout [n]


21 Jul 2010 PF KEY support enhancement. New variable '&*'. '&*' represents all of the remaining tokens
            beyond the last subtitution variable used. This is a recursive implementation. A single space
            is added between each token. Token can be enclosed in paired single or double quotes. Quotes
            are included as part of the token string.
